@@ -4,7 +4,9 @@ The necessary things when reinstall the system
 
 Office Tools Plus对于热衷Office的白嫖党友好
 
-Jdk在配置环境变量时 不要按照百度给的方式。自述：Path变量下增添 Jdk路径、Jdk\bin路径、Jre路径、Jre\bin路径
-                                               新添名为Java_Home的变量，值为Jdk路径
+Jdk安装完之后，命令行运行，并cd到安装目录下 命令行运行bin\jlink.exe --module-path jmods --add-modules java.desktop --output jre
+把Jre搞出来 然后接下步
+
+Jdk在配置环境变量时 不要按照百度给的方式。自述：Path变量下增添 Jdk路径、Jdk\bin路径、Jre路径、Jre\bin路径新添名为Java_Home的变量，值为Jdk路径
                                                
                                                
